# MonsterHunterWildsPakNatives

./: .bazelrc  .clang-format  .gitignore  .gitmodules  .luarc.json  Cargo.toml  ChatLog.lua  MODULE.bazel  README.md  WORKSPACE.bazel  generate.py  mod.py  xmake.lua
.github/workflows/: ci.yml
Cursor Always Center/: .clang-format  CMakeLists.txt  build_vs2022_plugin.bat  cmake.toml
Cursor Always Center/src/: Plugin.cpp
Improved Skill Notifications/: CHANGELOG.txt  README.bbcode  generate.py
Improved Skill Notifications/reframework/autorun/: ChatLog.lua
docs/: README.bbcode  README.md
mods/ClipCursor/: BUILD.bazel
mods/ClipCursor/src/: Plugin.cpp
mods/Cursor Always Center/: .clang-format  pack.py  xmake.lua
mods/Cursor Always Center/src/: Main.cpp  Plugin.cpp
mods/Custom Dango Ticket Rate/: Pack.ps1
mods/Custom Dango Ticket Rate/reframework/autorun/: CustomDangoTicketRate.lua
mods/Custom Enemy Random Scale/: pack.py
mods/Custom Enemy Random Scale/reframework/autorun/: CustomEnemyRandomScale.lua
mods/Exporter/reframework/autorun/: Exporter.lua
mods/Improved Skill Notifications/: pack.py
mods/Improved Skill Notifications/docs/: README.bbcode
mods/Improved Skill Notifications/reframework/autorun/: ImprovedSkillNotifications.lua
mods/ImprovedSkillNotifications/: BUILD.bazel
mods/ImprovedSkillNotifications/res/: namespaces.json
mods/ImprovedSkillNotifications/src/: ChatManager.cpp  ChatManager.hpp  HookFunctions.cpp  HookFunctions.hpp  HookManager.cpp  HookManager.hpp  Namespaces.cpp  Namespaces.hpp  Plugin.cpp
mods/ImprovedSkillNotifications/src/Utils/: Sdk.hpp  Utils.hpp
mods/pak-natives/: Cargo.toml  pakNativesConfig.ini
mods/pak-natives/src/: lib.rs  pak.rs
mods/scripts/reframework/autorun/: HornConcertId.lua  PlEquipSkillId.lua  PlKitchenSkillId.lua
reframework/autorun/: 100%DangoTicket.lua  ChatLog.lua  EnemyBossRandomScaleData.lua  Exporter.lua  HornConcertId.lua  PlEquipSkillId.lua
src/: lib.rs  pak.rs  utils.rs
src/structure/: file_entry.rs  header.rs  magic.rs  mod.rs
