load("@bazel_tools//tools/build_defs/repo:git.bzl", "new_git_repository")

new_git_repository(
    name = "bddisasm",
    build_file = "//third_party:bddisasm.BUILD.bazel",
    commit = "70db095765ab2066dd88dfb7bbcc42259ed167c5",
    remote = "https://github.com/bitdefender/bddisasm.git",
)

new_git_repository(
    name = "kananlib",
    build_file = "//third_party:kananlib.BUILD.bazel",
    commit = "cca66766b139994f478ea48befd67a179b7310ab",
    remote = "https://github.com/cursey/kananlib.git",
)

new_git_repository(
    name = "minhook",
    build_file = "//third_party:minhook.BUILD.bazel",
    commit = "98b74f1fc12d00313d91f10450e5b3e0036175e3",
    remote = "https://github.com/TsudaKageyu/minhook.git",
)

new_git_repository(
    name = "reframework",
    branch = "master",
    build_file = "//third_party:reframework.BUILD.bazel",
    remote = "https://github.com/praydog/REFramework.git",
)

new_git_repository(
    name = "safetyhook",
    build_file = "//third_party:safetyhook.BUILD.bazel",
    commit = "b046e123dc69821f2c375161e0adef3c6d9c9db4",
    remote = "https://github.com/cursey/safetyhook.git",
)

new_git_repository(
    name = "zydis",
    build_file = "//third_party:zydis.BUILD.bazel",
    commit = "1ba75aeefae37094c7be8eba07ff81d4fe0f1f20",
    init_submodules = True,
    remote = "https://github.com/zyantific/zydis.git",
)
