load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")
load("@rules_pkg//pkg:zip.bzl", "pkg_zip")

NAME = "ClipCursor"

cc_binary(
    name = NAME,
    deps = ["@reframework//:api"],
    srcs = glob(["src/**/*.cpp"]),
    copts = [
        "/GL",
        "/GR-",
        "/std:c++20",
        "/external:anglebrackets",
        "/external:W0",
        "/W4",
    ],
    linkopts = ["/LTCG"],
    linkshared = True,
        features = select({
        ":opt_mode": ["treat_warnings_as_errors"],
        "//conditions:default": [],
    }),
)

config_setting(
    name = "opt_mode",
    values = {"compilation_mode": "opt"},
)

pkg_zip(
    name = "pkg",
    srcs = [NAME],
    compression_level = 9,
    out = NAME + ".zip",
    tags = ["manual"],
)

refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = [NAME],
    prefix = [".vscode", "compile_commands", NAME],
    tags = ["manual"],
)
