load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")
load("@rules_pkg//pkg:zip.bzl", "pkg_zip")

NAME = "ImprovedSkillNotifications"

cc_binary(
    name = NAME,
    deps = ["@reframework//:sdk-mhrise"],
    srcs = glob(["src/**/*.cpp"]),
    copts = [
        "/GR-",
        "/std:c++20",
        "/source-charset:utf-8",
        "/external:anglebrackets",
        "/external:W0",
        "/W4",
    ] + select({
        ":opt_mode": ["/GL"],
        "//conditions:default": [],
    }),
    linkopts = select({
        ":opt_mode": ["/LTCG"],
        "//conditions:default": [],
    }),
    linkshared = True,
    features = select({
        ":opt_mode": ["treat_warnings_as_errors"],
        "//conditions:default": [],
    }),
)

config_setting(
    name = "opt_mode",
    values = {"compilation_mode": "opt"},
)

pkg_zip(
    name = "pkg",
    srcs = [NAME],
    compression_level = 9,
    out = NAME + ".zip",
    package_dir = "reframework/plugins",
    tags = ["manual"],
)

refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = {NAME: "--compilation_mode dbg"},
    prefix = [".vscode"],
    tags = ["manual"],
)
