[package]
name = "pak-natives"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "PakNatives"
crate-type = ["cdylib"]

[dependencies]
bincode = { version = "1.3.3", default-features = false }
murmurhash3 = { version = "0.0.5", default-features = false }
path-slash = { version = "0.2.1", default-features = false }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
walkdir = { version = "2.5.0", default-features = false }
windows = { version = "0.54.0", default-features = false, features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_System_SystemServices", "Win32_UI_WindowsAndMessaging"] }
